Add Create, Read, Delete and List handlers for WebExperience resource (#13)
* Add Read handler for WebExperience resource.

* Handle null createdAt and updatedAt values for Index resource.

* Add List handler for WebExperience resource.

* Add Delete handler for WebExperience resource.

* Add Create handler for WebExperience resource.